--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,23 @@ body{
     opacity: 1.5;
 }
 
+@media (min-width: 768px) {
+    .nav{
+        overflow-y: hidden!important;
+    }
+}
+
+.fd-btn{
+    opacity: 0.8;
+    font-weight: 700;
+    font-stretch: extra-expanded;
+}
+
+.fd-btn:hover{
+    opacity: 1;
+}
+
+
 #main{
     background: url("/images/bg/img1.png");
     background-size: cover,contain;
@@ -280,7 +297,7 @@ button i {
 
 @media only screen and (max-width:768px){
 
-    nav button{
+    nav .navbar-toggler{
         height:40px;
         width:80px;
     }
@@ -428,9 +445,55 @@ button i {
 
 .carousel-multi-item-2 .card img {
     border-radius: 2px;
-    height: 35vh;
+    height: 30vh;
     width: 100%; 
 }
 
     /*-------------------------*/
+
+
+    /*----------------MODAL----------*/
+
+.form-elegant .font-small {
+    font-size: 0.8rem; 
+}
+.form-elegant .z-depth-1a {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(55, 161, 255, 0.26), 0 4px 12px 0 rgba(121, 155, 254, 0.25);
+    box-shadow: 0 2px 5px 0 rgba(55, 161, 255, 0.26), 0 4px 12px 0 rgba(121, 155, 254, 0.25); 
+}
+.form-elegant .z-depth-1-half,
+.form-elegant .btn:hover {
+    -webkit-box-shadow: 0 5px 11px 0 rgba(85, 182, 255, 0.28), 0 4px 15px 0 rgba(36, 133, 255, 0.15);
+    box-shadow: 0 5px 11px 0 rgba(85, 182, 255, 0.28), 0 4px 15px 0 rgba(36, 133, 255, 0.15); 
+}
+input,textarea{
+    border-bottom-color: white!important;
+    opacity: 0.8;
+}
+.form-elegant .modal-header {
+    border-bottom: none; 
+}
+.modal-dialog .form-elegant .btn .fab {
+    color: #2196f3!important; 
+}
+.form-elegant .modal-body, .form-elegant .modal-footer {
+    font-weight: 400; 
+}
+.modal-body label,.modal-body i{
+    color:black!important;
+    opacity: 1!important;
+    font-weight: 500;
+}
+.modal button{
+    height: auto;
+    width: 100%;
+}
+.modal-header{
+    background: linear-gradient(to bottom,#2196f3,transparent);
+    color: black!important;
+    font-weight: 900!important;
+    opacity: 0.8; 
+}
+
+        /*-------------------------------*/
 
