--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@ body{
     margin-right: 4px;
 }
 
+.razbtn button{
+    width:initial !important;
+}
+
 .fixed-bottom{
     font-family: Cartoonist;
 }
