--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ body{
   }
 
 #smile{
-    background-image: url("/images/smilesbg.jpeg");
+    background-image: url("./images/smilesbg.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
   height: 100vh;
